# db-master

./: .env.example  .gitignore  Cargo.toml  README.md  REMOTE_IMPORT_INSTRUCTIONS.md  contracts-metadata.csv
.github/workflows/: db-deploy.yml
migrations/: 001_initial_schema.sql  002_remove_messages_persisted.sql
scripts/: migrate.sh  seed.sh
src/: csv_handler.rs  db_importer.rs  etherscan.rs  main.rs  models.rs
